--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,20 @@
 {
+  "manifest_version": 2,
   "name": "CodeProject Reputation Watcher",
-  "version": "1.6",
+  "short_name": "CPRepWatcher",
+  "version": "2.0",
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com 'unsafe-eval'; object-src 'self' ",
   "description": "Extension to retrieve a CodeProject accounts reputation points.",
-  "icons":{"48":"images/bob48.png", "128":"images/bob128.png"},	//Define any icon sizes and the files that you want to use with them. 48/128 etc.
-  "browser_action": {
-    "default_icon": "images/bob.png",	    // What icon do you want to display on the chrome toolbar
-	"default_popup": "cprepwatch.html"		// The page to popup when button clicked.
+  "icons": {
+      "48":"images/bob48.png",
+      "128":"images/bob128.png"
   },
-  "options_page": "options.html",			// Page to handle the options for the extension
+  "browser_action": {
+    "default_icon": "images/bob.png",
+    "default_popup": "cprepwatch.html"
+  },
+  "options_page": "options.html",
   "permissions": [
-    "http://*.codeproject.com/"             // Cross Site Access Requests
-  ],
-  "update_url": "http://www.dave-auld.net/ChromeExtensions/CPRepWatcher/updates.xml"		// Auto Update location
+    "http://*.codeproject.com/"
+  ]
 }
